--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,10 +4,10 @@
 	</small>
 	<nav>
 		<ul>
-			<li><%= link_to "Home", '#' %></li>
-			<li><%= link_to "About", '#' %></li>
-			<li><%= link_to "Services", '#' %></li>
-			<li><%= link_to "Contact", '#' %></li>
+			<li><%= link_to "Home", root_path %></li>
+			<li><%= link_to "About", about_path %></li>
+			<li><%= link_to "Services", services_path %></li>
+			<li><%= link_to "Contact", contact_path %></li>
 		</ul>
 	</nav>
 </footer>
