--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,4 +6,5 @@
 		<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
 		sample application.
 	</h2>
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
